[package]
name = "fuso"
version = "0.1.0"
edition = "2021"
repository = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.16"
async-mutex = "1.4.0"
pin-project = "1.0.10"

[dependencies.futures]
version = "0.3.21"
optional = true

[dependencies.tokio]
version = "1.17.0"
optional = true
features = ["full", "io-util"]

[dependencies.smol]
version = "1.2.5"
optional = true

[dependencies.serde]
version =  "1.0.136"
optional = true
features = ["derive"] 

[dependencies.axum]
version = "0.5.1"
optional = true

[dependencies.toml]
version = "0.5.9"
optional = true

[dependencies.clap]
version = "3.1.8"
optional = true

[dependencies.bytes]
version = "1.1.0"
optional = true

[dependencies.env_logger]
version =  "0.9.0"
optional = true

[dependencies.rsa]
version = "0.6.1"
optional = true

[dependencies.aes]
version = "0.8.1"
optional = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
debug = false


[features]
# 默认开启tokio异步 & clap参数解析器
default = ['fuso-rt-smol', "fuso-clap", "fuso-log", "bytes", "fuso-socks5"]
# 只提供api，不提供web界面
fuso-api = ["axum", "fuso-rt-tokio"]
# web界面
fuso-web = ["fuso-api", "toml", "serde"]
# 配置文件的方式运行
fuso-toml = ["toml"]
# 使用serde序列化进行数据传输
fuso-serde = ["serde"]
# 使用clap进行参数解析
fuso-clap = ["clap"]
# 运行时
fuso-rt-smol = ['smol', "futures"]
# tokio运行时
fuso-rt-tokio = ['tokio']
# 自定义运行时
fuso-rt-custom = ["futures"]
# 日志输出
fuso-log = ['env_logger']
# kcp
fuso-kcp = []
# quic
fuso-quic = []
# 直连模式
fuso-proxy = []
# socks5代理
fuso-socks5 = []
# rsa加密
fuso-crypt-rsa = []
# aes加密
fuso-crypt-aes = []


[[bin]]
name = "fuc"
path = "src/bin/client.rs"

[[bin]]
name = "fus"
path = "src/bin/server.rs"