[package]
name = "fuso"
version = "1.0.5-beta"
edition = "2021"
build = "build.rs"
authors = ["editso <https://github.com/editso>"]
description = "An intranet penetration proxy tool"
license = "GPL-3.0"
keywords = ["proxy", "penetrate", "socks5", "async", "small", "networking"]
categories = ["proxy", "network-programming"]
repository = "https://github.com/editso/fuso"
homepage = "https://github.com/editso/fuso"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
log = "0.4.16"
async-mutex = "1.4.0"
async-channel = "1.6.1"
pin-project = "1.0.10"

[dependencies.futures]
version = "0.3.21"
optional = true

[dependencies.tokio]
version = "1.17.0"
optional = true
features = ["full", "io-util"]

[dependencies.smol]
version = "1.2.5"
optional = true

[dependencies.serde]
version =  "1.0.136"
optional = true
features = ["derive"] 

[dependencies.bincode]
version = "1.3.3"
optional = true

[dependencies.axum]
version = "0.5.1"
optional = true

[dependencies.toml]
version = "0.5.9"
optional = true

[dependencies.clap]
version = "3.1.8"
features = ["derive"]
optional = true

[dependencies.bytes]
version = "1.1.0"
optional = true

[dependencies.env_logger]
version =  "0.9.0"
optional = true

[dependencies.rsa]
version = "0.6.1"
optional = true

[dependencies.aes]
version = "0.8.1"
optional = true

[dependencies.cbc]
version = "0.1.2"
optional = true

[dependencies.rand]
version = "0.8.5"
optional = true

[profile.release]
lto = true
debug = false
rpath = false
incremental = false
overflow-checks = false
opt-level = 'z'
codegen-units = 1
panic = 'abort'


[features]
# 默认开启tokio异步 & clap参数解析器
default = ['fuso-rt-tokio', "fuso-kcp","fuso-clap", "bytes", "fuso-serde", "fuso-socks5", "fuso-crypt-rsa", "fuso-crypt-aes"]
# 只提供api，不提供web界面
fuso-api = ["axum", "fuso-rt-tokio"]
# web界面
fuso-dashboard = ["fuso-api", "toml", "serde"]
# 配置文件的方式运行
fuso-toml = ["toml"]
# 使用serde序列化进行数据传输
fuso-serde = ["serde", "bincode"]
# 使用clap进行参数解析
fuso-clap = ["clap"]
# 运行时
fuso-rt-smol = ['smol', "futures"]
# tokio运行时
fuso-rt-tokio = ['tokio']
# 自定义运行时
fuso-rt-custom = ["futures"]
# 日志输出
fuso-log = ['env_logger']
# kcp
fuso-kcp = []
# quic
fuso-quic = []
# 直连模式
fuso-proxy = []
# socks5代理
fuso-socks5 = []
# rsa加密
fuso-crypt-rsa = ["rsa", "rand"]
# aes加密
fuso-crypt-aes = ["aes", "cbc"]


[[bin]]
name = "fuc"
path = "src/bin/client.rs"
required-features = ["fuso-log"]

[[bin]]
name = "fuc-quite"
path = "src/bin/client-quite.rs"

[[bin]]
name = "fus"
path = "src/bin/server.rs"
required-features = ["fuso-log"]