[package]
name = "fuso-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
env_logger = "0.9.0"


[dependencies]
log = {version = "0.4.14"}
smol = {version = "1.2.5"}
bytes = {version = "1.1.0"}
serde = { version = "1.0", features = ["derive"] }
futures = {version = "0.3"}
fuso-api = {path = "../fuso-api"}
fuso-socks = {path = "../fuso-socks"}
serde_json = "1.0"
async-trait = {version = "0.1.51"}
